<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Pokemon Minigames</string>
    <string name="welcome">Welcome to Pokemon Minigames!</string>
    <string name="sign_out">Sign Out</string>

    <!-- Login/Register -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enable_biometrics">Enable Biometrics</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="no_account">Dont have an account? Register</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="welcome_guest">Welcome, Guest!</string>
    <string name="welcome_user">Welcome, @user</string>
    <string name="player">Player</string>
    <string name="play_game1">Play Game 1</string>
    <string name="play_game2">Play Game 2</string>
    <string name="settings">Settings</string>
    <string name="default_web_client_id">258196293152-lvgsnfqlaaqqt3s33v2n9km3eaevubom.apps.googleusercontent.com</string>


</resources>
